--- a/index.html
+++ b/index.html
@@ -1,1 +1,99 @@
-<h1>base</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Primary Meta zTags -->
+    <title>Vũ Đăng Tính - InfoMe</title>
+    <link rel="icon" href="profile/favicon.ico" type="image/x-icon"/>
+    <meta name="title" content="Vũ Đăng Tính">
+    <meta name="description" content="GITHUB">
+    <meta name="author" content="dangtinh1997">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://dangtinh97.github.io">
+    <meta property="og:title" content="Thông tin cá nhân">
+    <meta property="og:description" content="Nếu mình tin vào chuyện tốt, thì chuyện tốt sẽ tới. Nếu vui thì tâm trạng sẽ tốt, mà tâm trạng tốt thì sẽ có sức khoẻ tốt. Mà sức khoẻ tốt thi làm việc gì cũng OK...">
+    <meta property="og:image" content="https://d1fdloi71mui9q.cloudfront.net/eVej4waoQECNse0H4HBK_BpmjeKJoG0ut5jxE">
+    <!-- Font Awesome icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <!-- Core theme CSS -->
+    <link rel="stylesheet" href="profile/style.css">
+    <style>
+        /* width */
+        ::-webkit-scrollbar {
+            width: 10px;
+        }
+
+        /* Track */
+        ::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 5px rgb(0, 33, 105);
+            border-radius: 10px;
+        }
+
+        /* Handle */
+        ::-webkit-scrollbar-thumb {
+            background: red;
+            border-radius: 10px;
+        }
+
+        /* Handle on hover */
+        ::-webkit-scrollbar-thumb:hover {
+            background: #00ff2a;
+        }
+    </style>
+</head>
+<body>
+<!-- Parallax Pixel Background Animation -->
+<section class="animated-background">
+    <div id="stars1"></div>
+    <div id="stars2"></div>
+    <div id="stars3"></div>
+</section>
+<!-- End of Parallax Pixel Background Animation -->
+<a id="profilePicture" href="#popup">
+    <img src="profile/me.jpeg" alt="Profile Picture">
+</a>
+<div class="overlay" id="popup">
+    <div class="popup">
+        <div class="popup-photo">
+            <a href="profile/me.jpeg" target="_blank">
+                <img src="profile/me.jpeg" alt="Profile Picture">
+            </a>
+        </div>
+        <div class="popup-quote">
+
+        </div>
+        <a class="popup-close" onclick="history.back()">&times;</a>
+    </div>
+</div>
+<div id="userName">
+    <b style="color: rgb(160, 252, 252);">Vũ Đăng Tính</b>
+</div>
+<script src="profile/iconify.js"></script>
+<div id="links">
+    <a  class="link" href="tel:+84372052643" target="_blank">
+        <i class="fab fa-telephone">&nbsp;</i><b>Phone</b> <small> @ </small>&nbsp; <b>  +84372052643</b>
+    </a>
+    <a class="link" href="mailto:dangtinha2@gmail.com?subject = Hello!&body =I am from github" target="_blank">
+        <i class="fab fa-at fa-1g">&nbsp;</i><b>Email</b> <small>@</small> <b>Vũ Đăng Tính</b>
+    </a>
+    <a class="link" href="https://www.facebook.com/dangtinhhaui" target="_blank">
+        <i class="fab fa-facebook">&nbsp;</i><b>Facebook</b> <small>@</small> <b>Vũ Đăng Tính</b>
+    </a>
+    <a class="link" href="https://www.facebook.com/profile.php?id=100010063962468" target="_blank">
+        <i class="fab fa-facebook">&nbsp;</i><b>My Love</b> <small>@</small> <b>Đỗ Thị Quỳnh</b>
+    </a>
+    <a class="link" href="https://zalo.me/0372052643" target="_blank">
+        <i class="fab fa-zalo">&nbsp;</i><b>Zalo</b> <small>@</small> <b>Vũ Đăng Tính</b>
+    </a>
+    <a class="link" href="https://t.me/dangtinh_97" target="_blank">
+        <i class="fab fa-telegram">&nbsp;</i><b>Telegram</b> <small>@</small> <b>Vũ Đăng Tính</b>
+    </a>
+</div>
+<div id="hashtag">
+    Made with ❤ by Vu Dang Tinh
+</div>
+</body>
+</html>
