--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:description" content="Nếu mình tin vào chuyện tốt, thì chuyện tốt sẽ tới. Nếu vui thì tâm trạng sẽ tốt, mà tâm trạng tốt thì sẽ có sức khoẻ tốt. Mà sức khoẻ tốt thi làm việc gì cũng OK...">
     <meta property="og:image" content="https://d1fdloi71mui9q.cloudfront.net/eVej4waoQECNse0H4HBK_BpmjeKJoG0ut5jxE">
     <!-- Font Awesome icons -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <!-- Core theme CSS -->
     <link rel="stylesheet" href="profile/style.css">
     <style>
@@ -69,31 +69,28 @@
     </div>
 </div>
 <div id="userName">
-    <b style="color: rgb(160, 252, 252);">Vũ Đăng Tính</b>
+    <b style="color: rgb(160, 252, 252);">Nahu Nguyễn</b>
 </div>
 <script src="profile/iconify.js"></script>
 <div id="links">
-    <a  class="link" href="tel:+84372052643" target="_blank">
-        <i class="fab fa-telephone">&nbsp;</i><b>Phone</b> <small> @ </small>&nbsp; <b>  +84372052643</b>
+    <a  class="link" href="tel:+84359253682" target="_blank">
+        <i class="fa-brands fa-whatsapp"></i><b>  Phone</b> <small> @ </small>&nbsp; <b>  035.925.3682</b>
     </a>
-    <a class="link" href="mailto:dangtinha2@gmail.com?subject = Hello!&body =I am from github" target="_blank">
-        <i class="fab fa-at fa-1g">&nbsp;</i><b>Email</b> <small>@</small> <b>Vũ Đăng Tính</b>
+    <a class="link" href="mailto:namhn.haui@gmail.com?subject = Hello!&body =I am from github" target="_blank">
+        <i class="fa-regular fa-envelope">&nbsp;</i><b>Email</b>
     </a>
-    <a class="link" href="https://www.facebook.com/dangtinhhaui" target="_blank">
-        <i class="fab fa-facebook">&nbsp;</i><b>Facebook</b> <small>@</small> <b>Vũ Đăng Tính</b>
+    <a class="link" href="https://www.facebook.com/hunanguyen6769" target="_blank">
+        <i class="fab fa-facebook">&nbsp;</i><b>Facebook</b>
     </a>
-    <a class="link" href="https://www.facebook.com/profile.php?id=100010063962468" target="_blank">
-        <i class="fab fa-facebook">&nbsp;</i><b>My Love</b> <small>@</small> <b>Đỗ Thị Quỳnh</b>
+    <a class="link" href="https://zalo.me/0359253682" target="_blank">
+        <i class="fa-solid fa-user-tie"></i>&nbsp;</i><b>Zalo</b>
     </a>
-    <a class="link" href="https://zalo.me/0372052643" target="_blank">
-        <i class="fab fa-zalo">&nbsp;</i><b>Zalo</b> <small>@</small> <b>Vũ Đăng Tính</b>
-    </a>
-    <a class="link" href="https://t.me/dangtinh_97" target="_blank">
-        <i class="fab fa-telegram">&nbsp;</i><b>Telegram</b> <small>@</small> <b>Vũ Đăng Tính</b>
+    <a class="link" href="https://t.me/nahunguyen" target="_blank">
+        <i class="fab fa-telegram">&nbsp;</i><b>Telegram</b>
     </a>
 </div>
 <div id="hashtag">
-    Made with ❤ by Vu Dang Tinh
+    Made by ❤ Nahu Nguyễn
 </div>
 </body>
 </html>
