--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <!-- Core theme CSS -->
-    <link rel="stylesheet" href="profile/style.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         /* width */
         ::-webkit-scrollbar {
@@ -58,8 +58,8 @@
 <div class="overlay" id="popup">
     <div class="popup">
         <div class="popup-photo">
-            <a href="profile/me.jpeg" target="_blank">
-                <img src="profile/me.jpeg" alt="Profile Picture">
+            <a href="me.jpeg" target="_blank">
+                <img src="me.jpeg" alt="Profile Picture">
             </a>
         </div>
         <div class="popup-quote">
@@ -71,7 +71,7 @@
 <div id="userName">
     <b style="color: rgb(160, 252, 252);">Nahu Nguyễn</b>
 </div>
-<script src="profile/iconify.js"></script>
+<script src="iconify.js"></script>
 <div id="links">
     <a  class="link" href="tel:+84359253682" target="_blank">
         <i class="fa-brands fa-whatsapp"></i><b>  Phone</b> <small> @ </small>&nbsp; <b>  035.925.3682</b>
