--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </section>
 <!-- End of Parallax Pixel Background Animation -->
 <a id="profilePicture" href="#popup">
-    <img src="profile/me.jpeg" alt="Profile Picture">
+    <img src="me.jpeg" alt="Profile Picture">
 </a>
 <div class="overlay" id="popup">
     <div class="popup">
