--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Primary Meta zTags -->
     <title>Vũ Đăng Tính - InfoMe</title>
-    <link rel="icon" href="profile/favicon.ico" type="image/x-icon"/>
-    <meta name="title" content="Vũ Đăng Tính">
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <meta name="title" content="Nahu Nguyễn">
     <meta name="description" content="GITHUB">
-    <meta name="author" content="dangtinh1997">
+    <meta name="author" content="nahunguyen">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://hunanguyen.github.io">
