--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://hunanguyen.github.io">
     <meta property="og:title" content="Thông tin cá nhân">
     <meta property="og:description" content="Nếu mình tin vào chuyện tốt, thì chuyện tốt sẽ tới. Nếu vui thì tâm trạng sẽ tốt, mà tâm trạng tốt thì sẽ có sức khoẻ tốt. Mà sức khoẻ tốt thi làm việc gì cũng OK...">
-    <meta property="og:image" content="https://storage.googleapis.com/sanvaybds-dev/20240124/f55b2982-9b05-43a0-b05a-0ec3a3ad10ae.jpeg">
+    <meta property="og:image" content="https://i.imgur.com/IzlRsHz.jpg">
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <!-- Core theme CSS -->
