--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Primary Meta zTags -->
-    <title>Vũ Đăng Tính - InfoMe</title>
+    <title>Nahu Nguyễn - InfoMe</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
     <meta name="title" content="Nahu Nguyễn">
     <meta name="description" content="GITHUB">
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://hunanguyen.github.io">
     <meta property="og:title" content="Thông tin cá nhân">
-    <meta property="og:description" content="Nếu mình tin vào chuyện tốt, thì chuyện tốt sẽ tới. Nếu vui thì tâm trạng sẽ tốt, mà tâm trạng tốt thì sẽ có sức khoẻ tốt. Mà sức khoẻ tốt thi làm việc gì cũng OK...">
+    <meta property="og:description" content="Always be a man">
     <meta property="og:image" content="https://i.imgur.com/IzlRsHz.jpg">
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
